--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Custom Toolbar</span>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+
 <div style="text-align:center; margin:200px auto">
   <div>
     <span>Default material icon</span>
@@ -12,7 +19,7 @@
 
   <div>
     <span>Using service to register for custom icon</span>
-    <mat-icon svgIcon = "cool_face"></mat-icon>
+    <mat-icon svgIcon="cool_face"></mat-icon>
   </div>
 
 </div>
