--- a/src/theme.scss
+++ b/src/theme.scss
@@ -151,3 +151,36 @@ $app-tab-theme: mat-light-theme($tab-primary, $tab-accent);
 @include angular-material-theme($my-app-theme);
 @include mat-tabs-theme($app-tab-theme);
 @include mat-toolbar-theme($app-tab-theme);
+
+// full list of component theme :
+//   @include mat-core-theme($theme);
+//   @include mat-autocomplete-theme($theme);
+//   @include mat-button-theme($theme);
+//   @include mat-button-toggle-theme($theme);
+//   @include mat-card-theme($theme);
+//   @include mat-checkbox-theme($theme);
+//   @include mat-chips-theme($theme);
+//   @include mat-table-theme($theme);
+//   @include mat-datepicker-theme($theme);
+//   @include mat-dialog-theme($theme);
+//   @include mat-divider-theme($theme);
+//   @include mat-expansion-panel-theme($theme);
+//   @include mat-form-field-theme($theme);
+//   @include mat-grid-list-theme($theme);
+//   @include mat-icon-theme($theme);
+//   @include mat-input-theme($theme);
+//   @include mat-list-theme($theme);
+//   @include mat-menu-theme($theme);
+//   @include mat-paginator-theme($theme);
+//   @include mat-progress-bar-theme($theme);
+//   @include mat-progress-spinner-theme($theme);
+//   @include mat-radio-theme($theme);
+//   @include mat-select-theme($theme);
+//   @include mat-sidenav-theme($theme);
+//   @include mat-slide-toggle-theme($theme);
+//   @include mat-slider-theme($theme);
+//   @include mat-stepper-theme($theme);
+//   @include mat-tabs-theme($theme);
+//   @include mat-toolbar-theme($theme);
+//   @include mat-tooltip-theme($theme);
+//   @include mat-snack-bar-theme($theme);
